@@ -1,3 +1,7 @@
+2000-08-30  Jeff Freedman  <jeff@patches.simutech.com>
+
+	* Actually from Derek Liauw Kie Fa:  New 2X scaling code.
+
 2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>
 
 	* data/exult_credits.shp, 
